# internal/model/post_model.go
@@ -3,28 +3,28 @@ package model
 import "mime/multipart"
 
 type PostResponse struct {
-	ID            int32  `json:"id"`
-	CategoryID    int32  `json:"categoryID,omitempty"`
-	UserID        int32  `json:"userID,omitempty"`
-	Title         string `json:"title"`
-	Summary       string `json:"summary,omitempty"`
-	Content       string `json:"content,omitempty"`
-	PublishedDate int64  `json:"publishedDate"`
-	LastUpdated   int64  `json:"lastUpdated"`
-	Thumbnail     string `json:"thumbnail"`
+	ID         int32  `json:"id"`
+	CategoryID int32  `json:"categoryID,omitempty"`
+	UserID     int32  `json:"userID,omitempty"`
+	Title      string `json:"title"`
+	Summary    string `json:"summary,omitempty"`
+	Content    string `json:"content,omitempty"`
+	CreatedAt  int64  `json:"createdAt"`
+	UpdatedAt  int64  `json:"updatedAt"`
+	Thumbnail  string `json:"thumbnail"`
 }
 
 type PostResponseWithPreload struct {
-	ID            int32             `json:"id"`
-	Category      *CategoryResponse `json:"category,omitempty"`
-	User          *UserResponse     `json:"user,omitempty"`
-	Title         string            `json:"title"`
-	Summary       string            `json:"summary,omitempty"`
-	Content       string            `json:"content,omitempty"`
-	PublishedDate int64             `json:"publishedDate"`
-	LastUpdated   int64             `json:"lastUpdated"`
-	Thumbnail     string            `json:"thumbnail"`
-	ViewCount     int64             `json:"viewCount"`
+	ID        int32             `json:"id"`
+	Category  *CategoryResponse `json:"category,omitempty"`
+	User      *UserResponse     `json:"user,omitempty"`
+	Title     string            `json:"title"`
+	Summary   string            `json:"summary,omitempty"`
+	Content   string            `json:"content,omitempty"`
+	CreatedAt int64             `json:"createdAt"`
+	UpdatedAt int64             `json:"updatedAt"`
+	Thumbnail string            `json:"thumbnail"`
+	ViewCount int64             `json:"viewCount"`
 }
 
 type PostGet struct {
@@ -50,7 +50,7 @@ type PostCreate struct {
 	Content    string
 	UserID     int32                 `validate:"omitempty,required"`
 	CategoryID int32                 `validate:"required"`
-	Thumbnail  *multipart.FileHeader `validate:"omitempty,image=1200_675"`
+	Thumbnail  *multipart.FileHeader `validate:"omitempty,image=1200_675_2"`
 }
 
 type PostUpdate struct {
@@ -60,7 +60,7 @@ type PostUpdate struct {
 	Content         string
 	UserID          int32                 `validate:"omitempty,required"`
 	CategoryID      int32                 `validate:"required"`
-	Thumbnail       *multipart.FileHeader `validate:"omitempty,image=1200_675"`
+	Thumbnail       *multipart.FileHeader `validate:"omitempty,image=1200_675_2"`
 	DeleteThumbnail bool
 }
 
